--- a/image-processing-api/docker-compose.yml
+++ b/image-processing-api/docker-compose.yml
@@ -42,36 +42,45 @@ services:
       - image-processing-api/rabbitmq.env
     build: ./image-processing-api
     ports:
+      - 5050:5050
       - 7000:7000
     volumes:
-      - ./image-processing-api/src:/src
+      - ./src:/src
     depends_on:
       postgres:
         condition: service_healthy
       rabbitmq-server:
         condition: service_healthy
+    environment:
+      RABBITMQ_USERNAME: admin
+      RABBITMQ_PASSWORD: pass
+      RABBITMQ_HOST: rabbitmq-server
+      RABBITMQ_QUEUE: dataqueue
+      RABBITMQ_ROUTING_KEY: dataqueue 
+      RABBITMQ_EXCHANGE: exchange_test
     command: python app.py
     networks:
       - rabbitnetwork
       - app
-    healthcheck:
-      test: curl --fail http://image-processing-api:5050/api/image-processing/ || exit 1
-      interval: 10s
-      timeout: 2s
-      retries: 5
-
   worker:
     env_file:
       - postgresql.env
       - image-processing-api/rabbitmq.env
-    build: ./image-processing-api
+    build: .
     volumes:
-      - ./image-processing-api/src:/src
+      - ./src:/src
     depends_on:
       postgres:
         condition: service_healthy
       rabbitmq-server:
         condition: service_healthy
+    environment:
+      RABBITMQ_USERNAME: admin
+      RABBITMQ_PASSWORD: pass
+      RABBITMQ_HOST: rabbitmq-server
+      RABBITMQ_QUEUE: dataqueue
+      RABBITMQ_ROUTING_KEY: dataqueue 
+      RABBITMQ_EXCHANGE: exchange_test
     command: python scripts/worker.py
     networks:
       - rabbitnetwork
@@ -79,41 +88,3 @@ services:
     deploy:
       mode: replicated
       replicas: 2
-  simple-file-server:
-    env_file:
-      - postgresql.env
-    build: ./simple-file-server
-    volumes:
-      - ./simple-file-server:/app
-      - ./simple-file-server/storage:/var/storage
-    depends_on:
-      postgres:
-        condition: service_healthy
-    command: python main.py
-    networks:
-      - app
-    healthcheck:
-      test: curl --fail http://simple-file-server:5051/api/file-server/ || exit 1
-      interval: 10s
-      timeout: 2s
-      retries: 5
-
-  nginx:
-    image: nginx:latest
-    ports:
-      - 80:80
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
-    networks:
-      - app
-    depends_on:
-      image-processing-api:
-        condition: service_healthy
-      simple-file-server:
-        condition: service_healthy
-networks:
-  rabbitnetwork:
-    driver: bridge
-  app:
-    driver: bridge
-
