--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,6 @@ services:
     image: postgres:15
     volumes:
       - ./postgres-data/postgres:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 5s
@@ -20,9 +18,6 @@ services:
   rabbitmq-server:
     image: "rabbitmq:3.6-management-alpine"
     hostname: "rabbitmq-host"
-    ports:
-      - "5672:5672"
-      - "15672:15672"
     environment:
       RABBITMQ_DEFAULT_USER: "admin"
       RABBITMQ_DEFAULT_PASS: "pass"
@@ -39,10 +34,8 @@ services:
   image-processing-api:
     env_file:
       - postgresql.env
-      - image-processing-api/rabbitmq.env
+      - rabbitmq.env
     build: ./image-processing-api
-    ports:
-      - 7000:7000
     volumes:
       - ./image-processing-api/src:/src
     depends_on:
@@ -50,7 +43,7 @@ services:
         condition: service_healthy
       rabbitmq-server:
         condition: service_healthy
-    command: python app.py
+    command: uwsgi --ini wsgi.ini
     networks:
       - rabbitnetwork
       - app
@@ -63,7 +56,7 @@ services:
   worker:
     env_file:
       - postgresql.env
-      - image-processing-api/rabbitmq.env
+      - rabbitmq.env
     build: ./image-processing-api
     volumes:
       - ./image-processing-api/src:/src
@@ -89,7 +82,7 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
-    command: python main.py
+    command: uwsgi --ini wsgi.ini
     networks:
       - app
     healthcheck:
