--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,10 @@
-events { 
+worker_processes  5;  ## Default: 1
+worker_rlimit_nofile 8192;
+
+events {
+  worker_connections  4096;  ## Default: 1024
 }
+
 http {
   resolver 127.0.0.11 ipv6=off valid=30s;
   
