--- a/nginx.conf
+++ b/nginx.conf
@@ -12,7 +12,7 @@ http {
     listen 80;
     listen 8000;  
 
-    server_name test.com;
+    server_name 192.168.2.182;
 
     proxy_set_header Host $http_host;
     proxy_set_header X-Forwarded-Host $host;
