Fixed default nginx configuration

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -17,12 +17,12 @@ http {
     proxy_set_header Host $http_host;
     proxy_set_header X-Forwarded-Host $host;
     location /api/file-server/ {
-      set $fileserver http://simple-file-server:5051;
+      set $fileserver http://file-storage:5051;
       client_max_body_size 8M;
       proxy_pass $fileserver;
     }
     location /api/image-processing/ {
-      set $imageprocessing http://image-processing-api:5050;
+      set $imageprocessing http://image-processor:5050;
       proxy_pass $imageprocessing;
     }
   }
