--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -25,5 +25,9 @@ http {
       set $imageprocessing http://image-processor:5050;
       proxy_pass $imageprocessing;
     }
+    location /static-files/ {
+      alias /var/www/html/static_files/;
+      autoindex on;
+    }
   }
 }
