--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -25,9 +25,32 @@ http {
       set $imageprocessing http://image-processor:5050;
       proxy_pass $imageprocessing;
     }
-    location /static-files/ {
+    location /static-files/ { 
+        if ($request_method = 'OPTIONS') {
+          add_header 'Access-Control-Allow-Origin' '*';
+          add_header 'Access-Control-Allow-Credentials' 'true';
+          add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS';
+          add_header 'Access-Control-Allow-Headers' '*';
+          add_header 'Access-Control-Max-Age' 1728000;
+          add_header 'Content-Type' 'text/plain charset=UTF-8';
+          add_header 'Content-Length' 0;
+          return 200;
+      }
+      if ($request_method = 'GET') {
+          add_header 'Access-Control-Allow-Origin' '*';
+          add_header 'Access-Control-Allow-Credentials' 'true';
+          add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS';
+          add_header 'Access-Control-Allow-Headers' '*';
+      }
+      access_log off;
+      expires 30d;
+      tcp_nodelay off;
+      open_file_cache max=3000 inactive=120s;
+      open_file_cache_valid 45s;
+      open_file_cache_min_uses 2;
+      open_file_cache_errors off;
       alias /var/www/html/static_files/;
-      autoindex on;
     }
+    
   }
 }
