--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -32,7 +32,6 @@ http {
           add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS';
           add_header 'Access-Control-Allow-Headers' '*';
           add_header 'Access-Control-Max-Age' 1728000;
-          add_header 'Content-Type' 'text/plain charset=UTF-8';
           add_header 'Content-Length' 0;
           return 200;
       }
@@ -49,6 +48,7 @@ http {
       open_file_cache_valid 45s;
       open_file_cache_min_uses 2;
       open_file_cache_errors off;
+      include  /etc/nginx/mime.types;
       alias /var/www/html/static_files/;
     }
     
