--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,11 @@ version: '3.8'
 services:
   postgres:
     env_file:
-      - ./config/postgresql.env
+      - ./compose/postgres/postgresql.env
     restart: always
     image: postgres:15
     volumes:
-      - ./postgres-data/postgres:/var/lib/postgresql/data
+      - ./compose/postgres/data:/var/lib/postgresql/data
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 5s
@@ -31,15 +31,15 @@ services:
 
   image-processor:
     env_file:
-      - ./config/postgresql.env
-      - ./config/rabbitmq.env
+      - ./compose/postgres/postgresql.env
+      - ./compose/rabbitmq/rabbitmq.env
     build: 
       context: ./image-processor
       dockerfile: image-processor.Dockerfile
     volumes:
       - ./image-processor/src:/src
-      - ./config/image-processor/conf.yml:/src/config/config.yml
-      - ./config/image-processor/wsgi.ini:/src/wsgi.ini
+      - ./compose/image-processor/conf.yml:/src/config/config.yml
+      - ./compose/image-processor/wsgi.ini:/src/wsgi.ini
     depends_on:
       postgres:
         condition: service_healthy
@@ -55,14 +55,14 @@ services:
   worker:
     restart: always
     env_file:
-      - ./config/postgresql.env
-      - ./config/rabbitmq.env
+      - ./compose/postgres/postgresql.env
+      - ./compose/rabbitmq/rabbitmq.env
     build: 
       context: ./image-processor
       dockerfile: worker.Dockerfile
     volumes:
       - ./image-processor/src:/src
-      - ./config/worker/conf.yml:/src/config/config.yml
+      - ./compose/worker/conf.yml:/src/config/config.yml
     depends_on:
       postgres:
         condition: service_healthy
@@ -77,15 +77,15 @@ services:
 
   file-storage:
     env_file:
-      - ./config/postgresql.env
+      - ./compose/postgres/postgresql.env
     build: 
       context: ./file-storage
       dockerfile: file-storage.Dockerfile
     volumes:
       - ./file-storage/src:/src
-      - ./file-storage/storage:/var/storage
-      - ./config/file-storage/conf.yml:/src/config/config.yml
-      - ./config/file-storage/wsgi.ini:/src/wsgi.ini
+      - ./compose/file-storage/storage:/var/storage
+      - ./compose/file-storage/conf.yml:/src/config/config.yml
+      - ./compose/file-storage/wsgi.ini:/src/wsgi.ini
     depends_on:
       postgres:
         condition: service_healthy
@@ -101,8 +101,8 @@ services:
     ports:
       - 80:80
     volumes:
-      - ./file-storage/storage:/var/www/html/static_files
-      - ./config/nginx.conf:/etc/nginx/nginx.conf
+      - ./compose/file-storage/storage:/var/www/html/static_files
+      - ./compose/nginx/nginx.conf:/etc/nginx/nginx.conf
     depends_on:
       image-processor:
         condition: service_healthy
